--- a/source/platformio.ini
+++ b/source/platformio.ini
@@ -15,6 +15,9 @@ framework = arduino
 lib_deps = WiFiManager
 	TelnetStream2
 	Arduino Filters
+# Do not create static libraries to support overwriting weak Arduino
+# framework functions
+lib_archive = false
 #upload_speed = 230400
 upload_speed = 460800
 
