--- a/source/platformio.ini
+++ b/source/platformio.ini
@@ -15,6 +15,7 @@ framework = arduino
 lib_deps = WiFiManager
 	TelnetStream2
 	Arduino Filters
+	Adafruit INA219
 # Do not create static libraries to support overwriting weak Arduino
 # framework functions
 lib_archive = false
