telnet: Sent one page as one TCP package
Signed-off-by: Timo Wischer <twischer@freenet.de>

--- a/source/platformio.ini
+++ b/source/platformio.ini
@@ -13,7 +13,8 @@ platform = espressif8266
 board = esp01
 framework = arduino
 lib_deps = WiFiManager
-	TelnetStream2
+	TelnetStream
+	StreamUtils
 	Arduino Filters
 	ArduinoINA219
 # Do not create static libraries to support overwriting weak Arduino
