Add Raspberry Pi 3b build target

--- a/source/platformio.ini
+++ b/source/platformio.ini
@@ -23,3 +23,20 @@ lib_archive = false
 #upload_speed = 230400
 upload_speed = 460800
 
+
+[env:raspberrypi_3b]
+platform = linux_arm
+board = raspberrypi_3b
+framework = wiringpi
+lib_deps =
+	Arduino Filters
+	ArduinoINA219
+	Adafruit INA260 Library
+build_flags =
+	-I lib/arduino/
+	-I lib/SPI/
+	-I lib/Wire/
+	-I "./.pio/libdeps/raspberrypi_3b/Adafruit BusIO/"
+	-I ".pio/libdeps/raspberrypi_3b/Adafruit INA260 Library/"
+	-D ESP8266 # Required for BitOrder used in Adafruit_INA260.h
+
