fixup! Add Raspberry Pi 3b build target

--- a/source/platformio.ini
+++ b/source/platformio.ini
@@ -36,7 +36,7 @@ build_flags =
 	-I lib/arduino/
 	-I lib/SPI/
 	-I lib/Wire/
-	-I "./.pio/libdeps/raspberrypi_3b/Adafruit BusIO/"
+	-I .pio/libdeps/raspberrypi_3b/ArduinoINA219/
+	-I ".pio/libdeps/raspberrypi_3b/Adafruit BusIO/"
 	-I ".pio/libdeps/raspberrypi_3b/Adafruit INA260 Library/"
-	-D ESP8266 # Required for BitOrder used in Adafruit_INA260.h
-
+	-D ARDUINO=510
