Support d1 Mini board

--- a/source/platformio.ini
+++ b/source/platformio.ini
@@ -10,7 +10,8 @@
 
 [env:esp01]
 platform = espressif8266
-board = esp01
+#board = esp01
+board = d1_mini
 framework = arduino
 lib_deps = WiFiManager
 	TelnetStream
