Extract MPPT lib
Signed-off-by: Timo Wischer <twischer@freenet.de>

--- a/source/platformio.ini
+++ b/source/platformio.ini
@@ -18,6 +18,7 @@ lib_deps = WiFiManager
 	StreamUtils
 	Arduino Filters
 	ArduinoINA219
+	MPPT
 # Do not create static libraries to support overwriting weak Arduino
 # framework functions
 lib_archive = false
